# oembed-service

./: .env-example  Cargo.toml  README.md
src/: errors.rs  firecrawl_service.rs  main.rs  models.rs  provider.rs  routes.rs
