[package]
name = "oembed-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
reqwest = { version = "0.12.11", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
scraper = "0.23.1"
url = "2.5"
env_logger = "0.11"
log = "0.4"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.36", features = ["full"] }
dotenv = "0.15"
